# MPusher

./: .gitignore  README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/administrator/mpush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/administrator/mpush/: AppContext.java  AppManager.java
app/src/main/java/com/example/administrator/mpush/activity/: BaseActivity.java  MainActivity.java
app/src/main/java/com/example/administrator/mpush/factory/: ThreadPoolFactory.java
app/src/main/java/com/example/administrator/mpush/global/: Contacts.java
app/src/main/java/com/example/administrator/mpush/utils/: AcousticEchoCancelerUtils.java  AudioNativeUtils.java  HandlerUtils.java  NativeUtils.java  PicutureNativeUtils.java  ScreenUtils.java  SizeUtils.java  UiUtils.java
app/src/main/java/com/example/administrator/mpush/view/: CameraView.java  HeartSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/administrator/mpush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
pusher/: CMakeLists.txt  build.gradle
pusher/src/androidTest/java/com/example/pusher/: ExampleInstrumentedTest.java
pusher/src/main/: AndroidManifest.xml
pusher/src/main/cpp/: FaacUtils.cpp  JNILoad.cpp  JNIUtil.cpp  live_native.cpp  main.cpp  pusher.cpp  pusher.h  x264Utils.cpp
pusher/src/main/cpp/include/: JNIUtil.h  live_native.h  x264.h
pusher/src/main/java/com/example/pusher/config/: PusherConfig.java
pusher/src/main/java/com/example/pusher/params/: AudioParams.java  Params.java  VideoParams.java
pusher/src/main/java/com/example/pusher/pusher/: AbstractPusher.java  AudioPusher.java  PusherEngine.java  PusherEnv.java  VideoPusher.java
pusher/src/main/java/com/example/pusher/pusher/impl/: Pusher.java
pusher/src/main/java/com/example/pusher/utils/: AcousticEchoCancelerUtils.java  AudioHelper.java  CameraHelper.java  LiveHandler.java  NativeUtils.java
pusher/src/test/java/com/example/pusher/: ExampleUnitTest.java
